# formalcloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pipeline.md  pyproject.toml
.github/workflows/: README.md
docs/: admission-production.md  ci-templates.md  compatibility-matrix.md  policy-packs.md  release-publish.md  replay-determinism.md  support-upgrades.md
examples/: k8s-manifest.yaml  kyverno-policy.yaml  policies-controls.yaml  policies-legacy-v0.yaml  policies-pilot-terraform.yaml  policies-rollout.yaml  policies-with-exceptions.yaml  policies.rego  policies.yaml  policy-tests.yaml  signing.key  terraform-plan.json
formal_cloud/: __init__.py  admission.py  attestation.py  benchmark.py  bundle.py  cli.py  evidence_pack.py  github_checks.py  intoto.py  ir_diff.py  junit.py  kubernetes.py  kyverno_adapter.py  models.py  policy.py  policy_test.py  rego_adapter.py  replay.py  sarif.py  terraform.py  trace.py  utils.py  verifier.py  yaml_compat.py
scripts/: precommit-formalcloud-k8s.sh
tests/: test_adapter_parity.py  test_admission.py  test_attestation.py  test_benchmark.py  test_bundle.py  test_cli.py  test_confidence.py  test_control_mapping.py  test_exceptions.py  test_exports.py  test_kubernetes_verifier.py  test_kyverno_adapter.py  test_policy_compile.py  test_policy_packs.py  test_policy_test.py  test_rego_adapter.py  test_replay_and_diff.py  test_rollout.py  test_sarif.py  test_terraform_pilot_checks.py  test_terraform_verifier.py
(+33 files in other folders)
